...
    },
    "activity_nav_title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Tracks"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Spår"
...
    },
    "common_continue" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fortsätt"
...
    },
    "gear_asset_gear_section" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Gear"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Utrustning"
...
    },
    "onboarding_permissions_title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Permissions"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Behörigheter"
...
    },
    "onboarding_preferences_title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ready for the Slopes"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Redo för backen"
...
    },
    "onboarding_restore_progress_profile" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profile"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Profil"
...
    },
    "onboarding_welcome_title" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Welcome to Snowly"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Välkommen till Snowly"
...
    },
    "profile_nav_settings" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Inställningar"
...
    },
    "tab_ride" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Ride"
          }
        },
        "sv" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Åka"
...
